--- a/sass/style.css
+++ b/sass/style.css
@@ -12,27 +12,27 @@
 
 @keyframes bounce {
   0% {
-    scale: 1;
+  transform: scale(1) ;
   }
   50% {
-    scale: 1.3;
+  transform: scale(1.3);
   }
   100% {
-    scale: 1;
+  transform: scale(1);
   }
 }
 @keyframes btnHover {
   0% {
-    scale: 1;
+    transform: scale(1);
     opacity: 0.5;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   }
   50% {
-    scale: 1.02;
+    transform: scale(1.02);
     box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.25);
   }
   100% {
-    scale: 1;
+    transform: scale(1);
     opacity: 0.8;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   }
